# libfaust

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
